# models/account.js
@@ -8,7 +8,7 @@ const followRepo = require('../repository/following')
 const avatarRepo = require('../repository/avatar')
 const tweetRepo = require('../repository/tweet')
 const paymentRepo = require('../repository/payment')
-
+const moment = require('moment');
 const helper = require('../helper')
 const Transaction = require('./transaction')
 const configBanwidth = require('../config/configBandwidth')
@@ -30,15 +30,22 @@ class Account {
                 if (!account) {
                     reject({ statusCode: -1, message: 'account not register'});
                 }
-                
-                const follow = followRepo.getOne(redis, publicKey);
-                const avatar = avatarRepo.getOne(redis, publicKey);
                 const bandwidthLimit = account.balance / configBanwidth.MAX_CELLULOSE * configBanwidth.NETWORK_BANDWIDTH;
+                const diff = account.bandwidthTime
+                ? moment(block.block.header.time).unix() - moment(account.bandwidthTime).unix()
+                : configBanwidth.BANDWIDTH_PERIOD;
+                // 24 hours window max 65kB
+                account.bandwidth = Math.ceil(Math.max(0, (configBanwidth.BANDWIDTH_PERIOD - diff) / configBanwidth.BANDWIDTH_PERIOD) * account.bandwidth + account.txSize);
                 account.bandwidthLimit = bandwidthLimit
                 account.energy = bandwidthLimit - account.bandwidth;
-                account.followings = follow;
-                account.avatar = avatar;
-                resolve( { statusCode: 1, message: '', value: account });
+
+                const follow = followRepo.getOne(this.redis, publicKey);
+                const avatar = avatarRepo.getOne(this.redis, publicKey);
+                Promise.all([follow, avatar]).then(([follow, avatar]) => {
+                    account.followings = follow;
+                    account.avatar = avatar;
+                    resolve( { statusCode: 1, message: '', value: account });
+                });
             }).catch(err => {
                 reject({ statusCode: -1, message: err });
             });
@@ -54,21 +61,28 @@ class Account {
             if (!StrKey.isValidEd25519PublicKey(publicKey)) {
                 reject({ statusCode: -1, message: 'invalid public key'});
             }
-            if (trans.verify({ account: publicKey, signature: signature })) {
-                reject({ statusCode: -1, message: 'invalid signature'});
-            }
             accountRepo.getOne(this.redis, publicKey).then(account => {
                 if (!account) {
                     reject({ statusCode: -1, message: 'account not register'});
                 }
-                const follow = followRepo.getOne(redis, publicKey);
-                const avatar = avatarRepo.getOne(redis, publicKey);
+                const thisTime = new Date().getTime();
+                
                 const bandwidthLimit = account.balance / configBanwidth.MAX_CELLULOSE * configBanwidth.NETWORK_BANDWIDTH;
+                const diff = account.bandwidthTime
+                ? moment(thisTime).unix() - moment(account.bandwidthTime).unix()
+                : configBanwidth.BANDWIDTH_PERIOD;
+                // 24 hours window max 65kB
+                account.bandwidth = Math.ceil(Math.max(0, (configBanwidth.BANDWIDTH_PERIOD - diff) / configBanwidth.BANDWIDTH_PERIOD) * account.bandwidth + account.txSize);
                 account.bandwidthLimit = bandwidthLimit
                 account.energy = bandwidthLimit - account.bandwidth;
-                account.followings = follow;
-                account.avatar = avatar;
-                resolve( { statusCode: 1, message: '', value: account });
+
+                const follow = followRepo.getOne(this.redis, publicKey);
+                const avatar = avatarRepo.getOne(this.redis, publicKey);
+                Promise.all([follow, avatar]).then(([follow, avatar]) => {
+                    account.followings = follow;
+                    account.avatar = avatar;
+                    resolve({ statusCode: 1, message: 'ok', value: account });
+                });
             }).catch(err => {
                 reject({ statusCode: -1, message: err });
             });
@@ -79,45 +93,17 @@ class Account {
         return Transaction.commit(transaction);
     }
 
-    payment(transaction) {
-        return Transaction.commit(transaction);
-    }
-
-    paymentHistory(publicKey) {
+    getFollowing(publicKey) {
         return new Promise((resolve, reject) => {
             if (!StrKey.isValidEd25519PublicKey(publicKey)) {
                 reject({ statusCode: -1, message: 'invalid public key'});
             }
-            paymentRepo.getAllByPublicKey(publicKey).then(payment => {
-                resolve( { statusCode: 1, message: '', value: {payments: payment} });
+            followRepo.getOne(this.redis, publicKey).then(followings => {
+                resolve( { statusCode: 1, message: '', value: {followings: followings} });
             }).catch(err => {
                 reject({ statusCode: -1, message: err });
             });
-        });
-        return 
-    }
-
-    getTweet(publicKey) {
-        return new Promise((resolve, reject) => {
-            if (!StrKey.isValidEd25519PublicKey(publicKey)) {
-                reject({ statusCode: -1, message: 'invalid public key'});
-            }
-            tweetRepo.getAllByPublicKey(publicKey).then(tweet => {
-                resolve( { statusCode: 1, message: '', value: tweet });
-            }).catch(err => {
-                reject({ statusCode: -1, message: err });
-            });
-        });
-            
-        return 
-    }
-
-    postTweet(transaction) {
-        return Transaction.commit(transaction);
-    }
-
-    interact(transaction) {
-        return Transaction.commit(transaction);
+        });        
     }
 
     following(address) {
@@ -126,4 +112,4 @@ class Account {
 
 }
 
-module.exports = Redisson;
+module.exports = Account;
